[metadata]
name = aoc2021_alpatakan
version = 0.11
author = alpatakan
author_email = atakanisbakan@gmail.com
description = AOC 2021 solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alpatakan/aoc2021
project_urls =
    Bug Tracker = https://github.com/alpatakan/aoc2021/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
include =
    aoc2021
    aoc2021/day*